--- a/Lib/BackgroundGenerator/index.html
+++ b/Lib/BackgroundGenerator/index.html
@@ -26,14 +26,14 @@
     <button onclick="generate()">Generate</button>
     <button class="cicrleBtn" onclick="circle();generate()">Circle | Square</button>
     <button onclick="tes()">Tesselation</button>
-    <button id="save" onclick="download()">Save</button>
+    <button id="save" onclick="download()" disabled>Save</button>
   </div>
 </div>
 <div class="main hidden" translate="no">
   <div class="container">
     <button class="tesGenerate" disabled>Generate</button>
     <button onclick="tes();generate()">Figure</button>
-    <button id="save" onclick="download()">Save</button>
+    <button id="save" onclick="download()" disabled>Save</button>
     <svg id="demo" viewBox="0 0 1600 600" preserveAspectRatio="xMidYMid slice">
       <defs>
         <linearGradient id="grad1" x1="0" y1="0" x2="1" y2="0" color-interpolation="sRGB">
