--- a/Lib/BackgroundGenerator/index.html
+++ b/Lib/BackgroundGenerator/index.html
@@ -27,7 +27,7 @@
 </div>
 <div class="main hidden" translate="no">
   <div class="container">
-    <button class="tesGenerate" disabled>Generate</button>
+    <button class="tesGenerate">Generate</button>
     <button onclick="tes();generate()">Figure</button>
     <button id="save" onclick="download()">Save</button>
     <svg id="demo" viewBox="0 0 1600 600" preserveAspectRatio="xMidYMid slice">
