--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <div class="main">
-  <div class="cards">
-</div>
-</div>
+    <h1>Elements</h1>
+    <div class="cards elements"></div>
+    <div class="line"></div>
+    <h1>Sites</h1>
+    <div class="cards sites"></div>
+  </div>
 </body>
 <script src="app.js"></script>
 </html>
