--- a/Lib/Rain/index.html
+++ b/Lib/Rain/index.html
@@ -6,6 +6,9 @@
   <title>CSSLib/Rain</title>
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="cloudStyle_1.css">
+  <link rel="stylesheet" href="cloudStyle_2.css">
+  <link rel="stylesheet" href="cloudStyle_3.css">
 </head>
 <body>
   <form action="../../index.html" onclick="event.stopPropagation()">
@@ -29,4 +32,7 @@
    </div>
 </body>
 <script src="app.js"></script>
+<script src="cloudApp_1.js"></script>
+<script src="cloudApp_2.js"></script>
+<script src="cloudApp_3.js"></script>
 </html>
