--- a/Lib/Cards/index.html
+++ b/Lib/Cards/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="./CardsStyle/08/style.css">
   <link rel="stylesheet" href="./CardsStyle/09/style.css">
   <link rel="stylesheet" href="./CardsStyle/10/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <form action="../../index.html" onclick="event.stopPropagation()">
@@ -31,7 +32,7 @@
    </div>
    <div class="counter"></div>
    <div class="container">
-      <div class="main" style="width: 100vw; right: 0%;">
+      <div class="main">
         <div class="bodyOne">
           <div class="containerOne">
             <div class="circle" style="--clr: #f40103">
@@ -46,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div class="main" style="width: 0vw;">
+      <div class="main">
         <div class="bodyTwo">
           <div class="containerTwo">
             <div class="card">
@@ -76,7 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="main" style="width: 0vw;">
+      <div class="main">
         <div class="bodyThree">
           <div class="containerThree">
             <div class="card">
@@ -121,7 +122,7 @@
           </div>
         </div>
       </div>
-      <div class="main" style="width: 0vw;">
+      <div class="main">
         <div class="bodyFour">
           <div class="card">
             <div class="box">
@@ -149,7 +150,7 @@
           </div>
         </div>
       </div>
-      <div class="main" style="width: 0vw;">
+      <div class="main">
         <div class="bodyFive">
           <div class="containerFive">
             <div class="card" style="--i:-4">1</div>
@@ -164,24 +165,139 @@
           </div>
         </div>
       </div>
-      <div class="main six" style="width: 0vw;">
-
+      <div class="main">
+        <div class="bodySix">
+          <div class="containerSix">
+            <div class="card" style="--clr:#f00;"></div>
+            <div class="card" style="--clr:#f9ff00;"></div>
+            <div class="card" style="--clr:#19ff00;"></div>
+          </div>
+        </div>
       </div>
-      <div class="main seven" style="width: 0vw;">
-
+      <div class="main">
+        <div class="bodySeven">
+          <div class="containerSeven">
+            <div class="card" style="--clr:#ff4d4d;">
+              <div class="content">
+                <h2>Design</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias reprehenderit debitis rem nam! Doloribus placeat tenetur magni saepe cupiditate error ullam at mollitia atque earum, aut eaque id provident non!</p>
+                <a href="#">Read More</a>
+              </div>
+              <div class="imgBx">
+                <img src="./CardsStyle/07/Images/graphic-design.png" alt="design">
+              </div>
+              <div class="textBx">
+                <h2>Design</h2>
+              </div>
+            </div>
+            <div class="card" style="--clr:#5fa7ff;">
+              <div class="content">
+                <h2>Code</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias reprehenderit debitis rem nam! Doloribus placeat tenetur magni saepe cupiditate error ullam at mollitia atque earum, aut eaque id provident non!</p>
+                <a href="#">Read More</a>
+              </div>
+              <div class="imgBx">
+                <img src="./CardsStyle/07/Images/data.png" alt="data">
+              </div>
+              <div class="textBx">
+                <h2>Code</h2>
+              </div>
+            </div>
+            <div class="card" style="--clr:#3ae374">
+              <div class="content">
+                <h2>Launch</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias reprehenderit debitis rem nam! Doloribus placeat tenetur magni saepe cupiditate error ullam at mollitia atque earum, aut eaque id provident non!</p>
+                <a href="#">Read More</a>
+              </div>
+              <div class="imgBx">
+                <img src="./CardsStyle/07/Images/rocket.png" alt="rocket">
+              </div>
+              <div class="textBx">
+                <h2>Launch</h2>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="main eight" style="width: 0vw;">
-
+      <div class="main">
+        <div class="bodyEight">
+          <div class="containerEight">
+            <div class="glass" style="--r:-15" data-text="Design">
+              <i class="fa-solid fa-compass-drafting"></i>
+            </div>
+            <div class="glass" style="--r:5" data-text="Code">
+              <i class="fa-solid fa-code"></i>
+            </div>
+            <div class="glass" style="--r:25" data-text="Launch">
+              <i class="fa-solid fa-rocket"></i>
+            </div>
+            <div class="glass" style="--r:-15" data-text="Earn">
+              <i class="fa-solid fa-money-check-dollar"></i>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="main nine" style="width: 0vw;">
-
+      <div class="main">
+        <div class="bodyNine">
+          <div class="containerNine">
+            <div class="box" style="--c1:#ffbc00; --c2:#ff0058;">
+              <span></span>
+              <div class="content">
+                <h2>Card One</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat explicabo inventore itaque minima?</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+            <div class="box" style="--c1:#03a9f4; --c2:#ff0058;">
+              <span></span>
+              <div class="content">
+                <h2>Card Two</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat explicabo inventore itaque minima?</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+            <div class="box" style="--c1:#4dff03; --c2:#00d0ff;">
+              <span></span>
+              <div class="content">
+                <h2>Card Three</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat explicabo inventore itaque minima?</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="main ten" style="left: -100%; width: 0vw;">
-        
+      <div class="main">
+        <div class="bodyTen">
+          <div class="containerTen">
+            <div class="drop" style="--clr:#ff0f5b;">
+              <div class="content">
+                <h2>01</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam vero molestias consequuntur temporibus.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+            <div class="drop" style="--clr:#be01fe;">
+              <div class="content">
+                <h2>02</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam vero molestias consequuntur temporibus.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+            <div class="drop" style="--clr:#01b4ff;">
+              <div class="content">
+                <h2>03</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam vero molestias consequuntur temporibus.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
   <script src="app.js"></script>
   <script src="./CardsStyle/02/vanilla-tilt.js"></script>
   <script src="./CardsStyle/02/app.js"></script>
+  <script src="./CardsStyle/06/app.js"></script>
 </html>
