--- a/Lib/3DAnimated/index.html
+++ b/Lib/3DAnimated/index.html
@@ -1,114 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSSLib/3DAnimated</title>
-  <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <form action="../../index.html" onclick="event.stopPropagation()">
-    <button class="back">
-      <svg xmlns="http://www.w3.org/2000/svg" id="Bold" viewBox="0 0 24 24" width="25" height="25"><path d="M12,24a1.493,1.493,0,0,1-1.06-.439L3.264,15.889a5.5,5.5,0,0,1,0-7.778L10.936.439a1.5,1.5,0,1,1,2.121,2.122L5.385,10.232a2.5,2.5,0,0,0,0,3.536l7.672,7.671A1.5,1.5,0,0,1,12,24Z"/><path d="M21.542,24a1.5,1.5,0,0,1-1.061-.439L11.4,14.475a3.505,3.505,0,0,1,0-4.95L20.481.439A1.5,1.5,0,0,1,22.6,2.561l-9.086,9.085a.5.5,0,0,0,0,.708L22.6,21.439A1.5,1.5,0,0,1,21.542,24Z"/></svg>
-    </button>
-   </form>
-   <div class="scale">
-   <div class="city animate">
-    <div class="skyscrapper one" style="--clr:#eee">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSSLib/3DAnimated</title>
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <form action="../../index.html" onclick="event.stopPropagation()">
+      <button class="back">
+        <svg xmlns="http://www.w3.org/2000/svg" id="Bold" viewBox="0 0 24 24" width="25" height="25"><path d="M12,24a1.493,1.493,0,0,1-1.06-.439L3.264,15.889a5.5,5.5,0,0,1,0-7.778L10.936.439a1.5,1.5,0,1,1,2.121,2.122L5.385,10.232a2.5,2.5,0,0,0,0,3.536l7.672,7.671A1.5,1.5,0,0,1,12,24Z"/><path d="M21.542,24a1.5,1.5,0,0,1-1.061-.439L11.4,14.475a3.505,3.505,0,0,1,0-4.95L20.481.439A1.5,1.5,0,0,1,22.6,2.561l-9.086,9.085a.5.5,0,0,0,0,.708L22.6,21.439A1.5,1.5,0,0,1,21.542,24Z"/></svg>
+      </button>
+    </form>
+    <div class="scale">
+    <div class="city animate">
+      <div class="skyscrapper one" style="--clr:#eee">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper two" style="--clr:#ffd3e0">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper two" style="--clr:#ffd3e0">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper three" style="--clr:#d3ffe4">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper three" style="--clr:#d3ffe4">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper four" style="--clr:#d6c7ff">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper four" style="--clr:#d6c7ff">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper five" style="--clr:#fdffd3">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper five" style="--clr:#fdffd3">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper six" style="--clr:#bdfff6">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper six" style="--clr:#bdfff6">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper seven" style="--clr:#feffa0">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper seven" style="--clr:#feffa0">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper eight" style="--clr:#d8e9ff">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper eight" style="--clr:#d8e9ff">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
-    </div>
-    <div class="skyscrapper nine" style="--clr:#ffe9d3">
-      <div class="top"></div>
-      <div>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="skyscrapper nine" style="--clr:#ffe9d3">
+        <div class="top"></div>
+        <div>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="bottom"></div>
       </div>
-      <div class="bottom"></div>
+      <div class="text one"><p>3D</p></div>
+      <div class="text two"><p>CSS only</p></div>
     </div>
-    <div class="text one"><p>3D</p></div>
-    <div class="text two"><p>CSS only</p></div>
-   </div>
-  </div>
-</body>
-<script src="app.js"></script>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
