--- a/Lib/NavigationMenu3/index.html
+++ b/Lib/NavigationMenu3/index.html
@@ -21,6 +21,6 @@
       <li><a href="#">Contact</a></li>
       <span class="toggleMenu"></span>
     </ul>
+    <script src="script.js"></script>
   </body>
-  <script src="app.js"></script>
 </html>
