--- a/Lib/Rain/index.html
+++ b/Lib/Rain/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSSLib/Rain</title>
-  <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="cloudStyle_1.css">
-  <link rel="stylesheet" href="cloudStyle_2.css">
-  <link rel="stylesheet" href="cloudStyle_3.css">
-</head>
-<body>
-  <form action="../../index.html" onclick="event.stopPropagation()">
-    <button class="back">
-      <svg xmlns="http://www.w3.org/2000/svg" id="Bold" viewBox="0 0 24 24" width="25" height="25"><path d="M12,24a1.493,1.493,0,0,1-1.06-.439L3.264,15.889a5.5,5.5,0,0,1,0-7.778L10.936.439a1.5,1.5,0,1,1,2.121,2.122L5.385,10.232a2.5,2.5,0,0,0,0,3.536l7.672,7.671A1.5,1.5,0,0,1,12,24Z"/><path d="M21.542,24a1.5,1.5,0,0,1-1.061-.439L11.4,14.475a3.505,3.505,0,0,1,0-4.95L20.481.439A1.5,1.5,0,0,1,22.6,2.561l-9.086,9.085a.5.5,0,0,0,0,.708L22.6,21.439A1.5,1.5,0,0,1,21.542,24Z"/></svg>
-    </button>
-   </form>
-   <div class="radio">
-    <input type="radio" name="cloud" value="1" checked>
-    <input type="radio" name="cloud" value="2">
-    <input type="radio" name="cloud" value="3">
-   </div>
-   <div class="cl containerOne">
-    <div class="cloud"></div>
-   </div>
-   <div class="cl containerTwo hidden">
-    <div class="cloud"></div>
-   </div>
-   <div class="cl containerThree hidden">
-    <div class="cloud"></div>
-   </div>
-</body>
-<script src="app.js"></script>
-<script src="cloudApp_1.js"></script>
-<script src="cloudApp_2.js"></script>
-<script src="cloudApp_3.js"></script>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSSLib/Rain</title>
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cloudStyle_1.css">
+    <link rel="stylesheet" href="cloudStyle_2.css">
+    <link rel="stylesheet" href="cloudStyle_3.css">
+  </head>
+  <body>
+    <form action="../../index.html" onclick="event.stopPropagation()">
+      <button class="back">
+        <svg xmlns="http://www.w3.org/2000/svg" id="Bold" viewBox="0 0 24 24" width="25" height="25"><path d="M12,24a1.493,1.493,0,0,1-1.06-.439L3.264,15.889a5.5,5.5,0,0,1,0-7.778L10.936.439a1.5,1.5,0,1,1,2.121,2.122L5.385,10.232a2.5,2.5,0,0,0,0,3.536l7.672,7.671A1.5,1.5,0,0,1,12,24Z"/><path d="M21.542,24a1.5,1.5,0,0,1-1.061-.439L11.4,14.475a3.505,3.505,0,0,1,0-4.95L20.481.439A1.5,1.5,0,0,1,22.6,2.561l-9.086,9.085a.5.5,0,0,0,0,.708L22.6,21.439A1.5,1.5,0,0,1,21.542,24Z"/></svg>
+      </button>
+    </form>
+    <div class="radio">
+      <input type="radio" name="cloud" value="1" checked>
+      <input type="radio" name="cloud" value="2">
+      <input type="radio" name="cloud" value="3">
+    </div>
+    <div class="cl containerOne">
+      <div class="cloud"></div>
+    </div>
+    <div class="cl containerTwo hidden">
+      <div class="cloud"></div>
+    </div>
+    <div class="cl containerThree hidden">
+      <div class="cloud"></div>
+    </div>
+    <script src="script.js"></script>
+    <script src="cloudApp_1.js"></script>
+    <script src="cloudApp_2.js"></script>
+    <script src="cloudApp_3.js"></script>
+  </body>
 </html>
