--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSSLib</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="main">
-    <h2>Elements</h2>
-    <div class="cards elements"></div>
-    <div class="line"></div>
-    <h2>Sites</h2>
-    <div class="cards sites"></div>
-  </div>
-</body>
-<script src="app.js"></script>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSSLib</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="main">
+      <h1>Elements</h1>
+      <div class="cards elements"></div>
+      <div class="line"></div>
+      <h2>Sites</h2>
+      <div class="cards sites"></div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
