--- a/Lib/Cards/index.html
+++ b/Lib/Cards/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./CardsStyle/08/style.css">
     <link rel="stylesheet" href="./CardsStyle/09/style.css">
     <link rel="stylesheet" href="./CardsStyle/10/style.css">
+    <link rel="stylesheet" href="./CardsStyle/11/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
@@ -290,6 +291,26 @@
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam vero molestias consequuntur temporibus.</p>
                   <a href="#">Read More</a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="main">
+          <div class="bodyEleven">
+            <div class="containerEleven">
+              <div class="card" style="--clr:#24c41f;">
+                <div class="imgBx">
+                  <img src="./CardsStyle/11/Images/LuigiArt.jpg" alt="Luigi">
+                </div>
+                <img src="./CardsStyle/11/Images/Luigi.png" alt="Luigi" class="c3d">
+                <h2>Luigi</h2>
+              </div>
+              <div class="card" style="--clr:#c41f1f;">
+                <div class="imgBx">
+                  <img src="./CardsStyle/11/Images/MarioArt.jpg" alt="Mario">
+                </div>
+                <img src="./CardsStyle/11/Images/Mario.png" alt="Mario" class="c3d">
+                <h2>Mario</h2>
               </div>
             </div>
           </div>
