--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     </div>
     <footer>
       <div class="contact">
-        <a href="https://vk.com/id207473200">
+        <a href="https://vk.com/id207473200" target="_blank">
           <div class="back">
             <i class="fa-brands fa-vk"></i>
           </div>
         </a>
-        <a href="https://github.com/Eugene9533">
+        <a href="https://github.com/Eugene9533" target="_blank">
           <div class="back">
             <i class="fa-brands fa-square-github"></i>
           </div>
         </a>
-        <a href="https://www.instagram.com/eu9shulgin/">
+        <a href="https://www.instagram.com/eu9shulgin/" target="_blank">
           <div class="back">
             <i class="fa-brands fa-square-instagram"></i>
           </div>
