--- a/Lib/Snake/index.html
+++ b/Lib/Snake/index.html
@@ -24,7 +24,10 @@
           <span class="score">Score: 0</span>
           <span class="high-score"></span>
         </div>
-        <div class="play-board"></div>
+        <div class="container-board">
+          <div class="play-board snake"></div>
+          <div class="play-board food"></div>
+        </div>
         <div class="controls"></div>
       </div>
     <script src="script.js"></script>
