Memory game (up), dark theme on main page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <div class="style">
+      <img class="dark" src="./Img/dark.png" alt="dark">
+      <img class="light active" src="./Img/light.png" alt="light">
+    </div>
     <div class="main">
       <h1>Css elements</h1>
       <div class="cards css"></div>
