--- a/collection/Paint/index.html
+++ b/collection/Paint/index.html
@@ -71,6 +71,21 @@
             </li>
           </ul>
         </div>
+        <div class="row undo-redo">
+          <ul class="options">
+            <li class="option">
+              <button class="undo">
+                <img src="./icons/undo.svg" alt="undo">
+              </button>
+            </li>
+            <li class="option">
+              <button class="redo">
+                <img src="./icons/redo.svg" alt="redo">
+              </button>
+            </li>
+          </ul>
+          
+        </div>
         <div class="row buttons">
           <label class="title"></label>
           <button class="clear-canvas">Clear board</button>
