--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collection</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="style">
-      <img class="dark" src="./media/icons/dark.png" alt="dark">
-      <img class="light active" src="./media/icons/light.png" alt="light">
+      <img class="dark" src="./src/media/icons/dark.png" alt="dark">
+      <img class="light active" src="./src/media/icons/light.png" alt="light">
     </div>
     <div class="main">
       <h1>Css elements</h1>
@@ -45,6 +45,6 @@
         <p>&#169; E. S. Shulgin, 2023</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
