--- a/collection/Shadow/index.html
+++ b/collection/Shadow/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <div class="return"></div>
-    <div id="text">Shadow</div>
+    <div id="textM">Shadow</div>
+    <div id="text">S</div>
+    <div id="text">h</div>
+    <div id="text">a</div>
+    <div id="text">d</div>
+    <div id="text">o</div>
+    <div id="text">w</div>
     <div id="light"></div>
     <script src="script.js"></script>
     <script src="../../src/elements/return_button/script.js"></script>
