--- a/collection/Cards/index.html
+++ b/collection/Cards/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./CardsStyle/09/style.css">
     <link rel="stylesheet" href="./CardsStyle/10/style.css">
     <link rel="stylesheet" href="./CardsStyle/11/style.css">
+    <link rel="stylesheet" href="./CardsStyle/12/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
@@ -311,11 +312,26 @@
             </div>
           </div>
         </div>
+        <div class="main">
+          <div class="bodyTwelve">
+            <div class="containerTwelve">
+                <div class="options">
+                    <div class="option active" style="background-image: url(CardsStyle/12/images/1.jpg);"></div>
+                    <div class="option" style="background-image: url(CardsStyle/12/images/2.jpg);"></div>
+                    <div class="option" style="background-image: url(CardsStyle/12/images/3.jpg);"></div>
+                    <div class="option" style="background-image: url(CardsStyle/12/images/4.jpg);"></div>
+                    <div class="option" style="background-image: url(CardsStyle/12/images/5.jpg);"></div>
+                    <div class="option" style="background-image: url(CardsStyle/12/images/6.jpg);"></div>
+                </div>
+            </div>
+          </div>
+        </div>
       </div>
       <script src="script.js"></script>
       <script src="./CardsStyle/02/vanilla-tilt.js"></script>
       <script src="./CardsStyle/02/app.js"></script>
       <script src="./CardsStyle/06/app.js"></script>
+      <script src="./CardsStyle/12/app.js"></script>
       <script src="../../src/elements/return_button/script.js"></script>
   </body>
 </html>
