fix ico, styles

--- a/collection/MemoryGame/Prev/index.html
+++ b/collection/MemoryGame/Prev/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory game</title>
-    <link rel="icon" href="../../src/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- <div class="return"></div> -->
+    <div class="return"></div>
     <div class="modal hidden">
       <div class="modalWindow">
         <div class="win">you won!</div>
@@ -23,6 +23,6 @@
       <div class="newV"></div>
     </a>
     <script src="script.js"></script>
-    <!-- <script src="../../../src/elements/return_button/script.js"></script> -->
+    <script src="../../../src/elements/return_button/script.js"></script>
   </body>
 </html>
