--- a/src/elements/return_button/index.html
+++ b/src/elements/return_button/index.html
@@ -1,4 +1,4 @@
-<form class="return_button" action="../../index.html" onclick="event.stopPropagation()">
+<form class="return_button" action="../../../index.html" onclick="event.stopPropagation()">
     <button>
       <svg xmlns="http://www.w3.org/2000/svg" id="Bold" viewBox="0 0 24 24" width="25" height="25">
         <path d="M12,24a1.493,1.493,0,0,1-1.06-.439L3.264,15.889a5.5,5.5,0,0,1,0-7.778L10.936.439a1.5,1.5,0,1,1,2.121,2.122L5.385,10.232a2.5,2.5,0,0,0,0,3.536l7.672,7.671A1.5,1.5,0,0,1,12,24Z"/>
