--- a/collection/NavigationMenu/index.html
+++ b/collection/NavigationMenu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation menu</title>
-    <link rel="icon" href="../../src/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./MenuStyle/01/style.css">
     <link rel="stylesheet" href="./MenuStyle/02/style.css">
