--- a/collection/Rain/index.html
+++ b/collection/Rain/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rain</title>
-    <link rel="icon" href="../../src/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="cloudStyle_1.css">
     <link rel="stylesheet" href="cloudStyle_2.css">
