fix tetris(dark style), main page (more cards on screen)

--- a/collection/Tetris/index.html
+++ b/collection/Tetris/index.html
@@ -22,6 +22,11 @@
         </div>
       </div>
       <div id="scoreboard">
+        <div id="themeContainer">
+          <button id="themeToggle" class="theme-btn">
+              <span class="theme-text">Тёмная тема</span>
+          </button>
+        </div>
         <div>Очки: <span id="score">0</span></div>
         <div>Уровень: <span id="level">1</span></div>
         <div>
