--- a/collection/Keyboard/index.html
+++ b/collection/Keyboard/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="../../favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body onclick="event.preventDefault()" oncontextmenu="return false;">
+    <body onclick="event.preventDefault()" oncontextmenu="return false;" spellcheck="false">
         <div class="return"></div>
         <div class="keyboard">
             <div class="input">
