css container, style

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-  <div class="style">
-    <img class="dark" src="./src/media/icons/dark.png" alt="dark">
-    <img class="light active" src="./src/media/icons/light.png" alt="light">
+  <div class="style-pos">
+    <div class="style">
+      <img class="dark" src="./src/media/icons/dark.png" alt="dark">
+      <img class="light active" src="./src/media/icons/light.png" alt="light">
+    </div>
   </div>
   <div class="main">
     <h1>Css elements</h1>
@@ -46,7 +48,7 @@
       </a>
     </div>
     <div class="co">
-      <p>E. S. Shulgin, 2023-2025</p>
+      <p>E. S. Shulgin, 2023-2026</p>
     </div>
   </footer>
   <script src="./src/script.js"></script>
